# ex_strsim

./: .gitignore  .mise.toml  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: ex_strsim.ex
lib/ex_strsim/: native.ex
native/ex_strsim_nif/: Cargo.toml
native/ex_strsim_nif/.cargo/: config.toml
native/ex_strsim_nif/src/: lib.rs
test/: ex_strsim_test.exs
